Augmented and new country db

--- a/un_country_graph.ipynb
+++ b/un_country_graph.ipynb
@@ -61411,6 +61411,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('mentioned_countries.csv', 'w') as csvfile:\n",
+    "    for item in new_db:\n",
+    "        csvfile.write(item[0] + ',' + item[1] + ',' + str(item[2]) + ',' + item[3] + ',' + item[4] + '\\n')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
