--- a/HowToMakeAHit.ipynb
+++ b/HowToMakeAHit.ipynb
@@ -426,7 +426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![scater_matrix.png](attachment:scatter_matrix.png)"
+    "![image.png](attachment:image.png)"
    ]
   },
   {
